add vsync and opengl

--- a/01.android_system/02.Framework/surfaceflingr/05.Choreographer.md
+++ b/01.android_system/02.Framework/surfaceflingr/05.Choreographer.md
@@ -118,3 +118,54 @@ frameworks\native\libs\gui\ DisplayEventReceiver.cpp
 这里又通过IDisplayEventConnection接口来请求Vsync信号，IDisplayEventConnection实现了Binder通信框架，可以跨进程调用，因为Vsync信号请求进程和Vsync产生进程有可能不在同一个进程空间，因此这里就借助IDisplayEventConnection接口来实现。下面通过图来梳理Vsync请求的调用流程：
 
 ![Vsync请求的调用流程](20140630193116703.png)
+
+
+
+
+##Choreographer 使用例子
+
+
+        Choreographer mChoreographer = null;
+
+        // 初始化Choreographer的实例，此实例为线程唯一。这个类的用法与Handler
+
+        // 类似，不过它总是在VSYC同步时回调，所以比Handler更适合做动画的循环器[1]
+
+        mChoreographer= Choreographer.getInstance();
+
+      public void scheduleNextFrame() {
+
+        // 要求在显示系统刷新下一帧时回调mFrameRender，注意，只回调一次
+
+        mChoreographer.postCallback(Choreographer.CALLBACK_ANIMATION
+
+               , mFrameRender, null);
+
+    }
+
+    // 这个Runnable对象用以在窗口上描绘一帧
+    publicRunnable mFrameRender = new Runnable() {
+       @Override
+        publicvoid run() {
+            try{
+               // 获取当期时间戳
+               long time = mChoreographer.getFrameTime() % 1000;
+
+               // 绘图
+               if (mSurface.isValid()) {
+                   Canvas canvas = mSurface.lockCanvas(null);
+                   canvas.drawColor(Color.DKGRAY);
+                   canvas.drawRect(2 * mLp.width * time / 1000
+                            - mLp.width, 0, 2 *mLp.width * time
+                            / 1000, mLp.height,mPaint);
+                   mSurface.unlockCanvasAndPost(canvas);
+                   mSession.finishDrawing(mWindow);
+               }
+
+              if(mContinueAnime)
+                scheduleNextFrame();
+           } catch (Exception e) {
+               e.printStackTrace();
+           }
+        }
+    };
