--- a/01.android_system/00.basic/05.SeLinux.md
+++ b/01.android_system/00.basic/05.SeLinux.md
@@ -57,10 +57,9 @@ setenforce 0                  ##设置SELinux 成为permissive模式
 
                               ##setenforce 1 设置SELinux 成为enforcing模式
 
-2、修改配置文件需要重启机器：
 
-修改/etc/selinux/config 文件
 
-将SELINUX=enforcing改为SELINUX=disabled
+You can control the kernel command line by editing your BoardConfig.mk and adding this:
 
-重启机器即可
+BOARD_KERNEL_CMDLINE += androidboot.selinux=permissive
+The Android centric way is enforced by init, if you look in system/core/init/init.cpp look at the selinux_initialize() routine that is called from main().
